--- a/index.html
+++ b/index.html
@@ -1,2 +1,7 @@
-<h1>Welcome to CIS 255</h1>
-<p>https://codepen.io/bjsteel1/pen/dqzJRo</p>
+<h1>Prog00</h1>
+<p>Topic:How to budget money.</p>
+<p>Github Pages: https://bjsteel1.github.io/pages/</p>
+<p>CodePen: https://codepen.io/bjsteel1/pen/dqzJRo</p>
+<p>M-Drive: https://webp.svsu.edu/~bjsteel1/cis255.html</p>
+<p>CSIS Server: https://csis.svsu.edu/~bjsteel1/cis255.html</p>
+<p>000webhost: bjsteel1.000webhostapp.com </p>
