--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h1>Prog00</h1>
 <p>Topic:How to budget money.</p>
-<p>Github Pages: https://bjsteel1.github.io/pages/</p>
-<p>CodePen: https://codepen.io/bjsteel1/pen/dqzJRo</p>
-<p>M-Drive: https://webp.svsu.edu/~bjsteel1/cis255.html</p>
-<p>CSIS Server: https://csis.svsu.edu/~bjsteel1/cis255.html</p>
-<p>000webhost: bjsteel1.000webhostapp.com </p>
+<p>Github Pages: <a href="https://bjsteel1.github.io/pages/">https://bjsteel1.github.io/pages/</a>	</p>
+<p>CodePen: <a href="https://codepen.io/bjsteel1/pen/dqzJRo">https://codepen.io/bjsteel1/pen/dqzJRo</a> </p>
+<p>M-Drive: <a href="https://webp.svsu.edu/~bjsteel1/cis255.html">https://webp.svsu.edu/~bjsteel1/cis255.html</a></p>
+<p>CSIS Server: <a href="https://csis.svsu.edu/~bjsteel1/cis255.html">https://csis.svsu.edu/~bjsteel1/cis255.html</a></p>
+<p>000webhost: <a href="bjsteel1.000webhostapp.com">bjsteel1.000webhostapp.com</a></p>
