--- a/index.html
+++ b/index.html
@@ -5,3 +5,17 @@
 <p>M-Drive: <a href="https://webp.svsu.edu/~bjsteel1/cis255.html">https://webp.svsu.edu/~bjsteel1/cis255.html</a></p>
 <p>CSIS Server: <a href="https://csis.svsu.edu/~bjsteel1/cis255.html">https://csis.svsu.edu/~bjsteel1/cis255.html</a></p>
 <p>000webhost: <a href="bjsteel1.000webhostapp.com">bjsteel1.000webhostapp.com</a></p>
+
+Prog01
+<ol>
+			
+			<li><a target="_blank" href="https://cis255.wordpress.com/editors-and-topics/">WordPress Topics Page</a></li>
+			<li>CodePen</li>
+			<li>Prog01 Links</li>
+			<ul>
+				<li>M-drive</li>
+				<li>CSIS server</li>
+				<li>000webhostapp</li>
+			</ul>
+			<li>My opinion regarding which hosting platform is best. </li>
+		</ol>
