--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <p>CSIS Server: <a href="https://csis.svsu.edu/~bjsteel1/cis255.html">https://csis.svsu.edu/~bjsteel1/cis255.html</a></p>
 <p>000webhost: <a href="bjsteel1.000webhostapp.com">bjsteel1.000webhostapp.com</a></p>
 
-Prog01
+<h1>Prog01</h1>
 <ol>
 			
 			<li><a target="_blank" href="https://cis255.wordpress.com/editors-and-topics/">WordPress Topics Page</a></li>
