--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <ol>
 			
 			<li><a target="_blank" href="https://cis255.wordpress.com/editors-and-topics/">WordPress Topics Page</a></li>
-			<li><a href="CodePen">https://codepen.io/bjsteel1/pen/vzzXXG</a></li>
+			<li><a href="https://codepen.io/bjsteel1/pen/vzzXXG">CodePen</a></li>
 			<li>Prog01 Links</li>
 			<ul>
 				<li>M-drive</li>
