--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<li>Prog01 Links</li>
 			<ul>
 				<li><a href="https://webp.svsu.edu/~bjsteel1/prog01.html">M-Drive</a></li>
-				<li>CSIS server</li>
+				li><a href="https://csis.svsu.edu/~bjsteel1/prog01.html">CSIS-Server</a></li>
 				<li>000webhostapp</li>
 			</ul>
 			<li>My opinion regarding which hosting platform is best. </li>
