--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 			<li>Prog01 Links</li>
 			<ul>
 				<li><a href="https://webp.svsu.edu/~bjsteel1/prog01.html">M-Drive</a></li>
-				li><a href="https://csis.svsu.edu/~bjsteel1/prog01.html">CSIS-Server</a></li>
-				<li>000webhostapp</li>
+				<li><a href="https://csis.svsu.edu/~bjsteel1/prog01.html">CSIS-Server</a></li>
+				<li><a href="http://bjsteel1.000webhostapp.com/prog01.html">000WebHostApp</a></li>
 			</ul>
 			<li>My opinion regarding which hosting platform is best. </li>
 		</ol>
