--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <p>CodePen: <a href="https://codepen.io/bjsteel1/pen/dqzJRo">https://codepen.io/bjsteel1/pen/dqzJRo</a> </p>
 <p>M-Drive: <a href="https://webp.svsu.edu/~bjsteel1/cis255.html">https://webp.svsu.edu/~bjsteel1/cis255.html</a></p>
 <p>CSIS Server: <a href="https://csis.svsu.edu/~bjsteel1/cis255.html">https://csis.svsu.edu/~bjsteel1/cis255.html</a></p>
-<p>000webhost: <a href="bjsteel1.000webhostapp.com">bjsteel1.000webhostapp.com</a></p>
+<p>000webhost: <a href="bjsteel1.000webhostapp.com/index.html">bjsteel1.000webhostapp.com</a></p>
 
 <h1>Prog01</h1>
 <ol>
