--- a/index.html
+++ b/index.html
@@ -18,4 +18,6 @@
 				<li><a href="http://bjsteel1.000webhostapp.com/prog01.html">000WebHostApp</a></li>
 			</ul>
 			<li>My opinion regarding which hosting platform is best. </li>
+			<p> I find that the csis server is the easiest hosting options because I can code my html directly in notepad++
+			    and upload the easily to the server. <p>
 		</ol>
