--- a/index.html
+++ b/index.html
@@ -21,3 +21,7 @@
 			<p> I find that the csis server is the easiest hosting option because I can code my html directly in notepad++
 			    and upload the easily to the server. <p>
 		</ol>
+
+<h1>Prog02</h1>
+	<li><a href="https://github.com/bjsteel1/PhpProject13">GitHub Repo</a></li>
+	<li><a href="https://github.com/bjsteel1/PhpProject13">CSIS Server</a></li>
