--- a/index.html
+++ b/index.html
@@ -24,4 +24,4 @@
 
 <h1>Prog02</h1>
 	<li><a href="https://github.com/bjsteel1/PhpProject13">GitHub Repo</a></li>
-	<li><a href="https://csis.svsu.edu/~bjsteel1/PhpProject13/">CSIS Server</a></li>
+	<li><a target="_blank" href"https://csis.svsu.edu/~bjsteel1/PhpProject13/">CSIS Server</a></li>
