--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			</ul>
 			<li>My opinion regarding which hosting platform is best. </li>
 			<p> I find that the csis server is the easiest hosting option because I can code my html directly in notepad++
-			    and upload the easily to the server. <p>
+			    and upload it easily to the server. <p>
 		</ol>
 
 <h1>Prog02</h1>
