--- a/index.html
+++ b/index.html
@@ -1,27 +1,64 @@
-<h1>Prog00</h1>
-<p>Topic:How to budget money.</p>
-<p>Github Pages: <a href="https://bjsteel1.github.io/pages/">https://bjsteel1.github.io/pages/</a>	</p>
-<p>CodePen: <a href="https://codepen.io/bjsteel1/pen/dqzJRo">https://codepen.io/bjsteel1/pen/dqzJRo</a> </p>
-<p>M-Drive: <a href="https://webp.svsu.edu/~bjsteel1/cis255.html">https://webp.svsu.edu/~bjsteel1/cis255.html</a></p>
-<p>CSIS Server: <a href="https://csis.svsu.edu/~bjsteel1/cis255.html">https://csis.svsu.edu/~bjsteel1/cis255.html</a></p>
-<p>000webhost: <a href="bjsteel1.000webhostapp.com/index.html">bjsteel1.000webhostapp.com</a></p>
+<!DOCTYPE html>
+<html lang="en">
 
-<h1>Prog01</h1>
-<ol>
+	<body>
+		<header>
+			<h1>Bailey Steele (bjsteel1)</h1>
 			
-			<li><a target="_blank" href="https://cis255.wordpress.com/editors-and-topics/">WordPress Topics Page</a></li>
-			<li><a href="https://codepen.io/bjsteel1/pen/vzzXXG">CodePen</a></li>
-			<li>Prog01 Links</li>
-			<ul>
-				<li><a href="https://webp.svsu.edu/~bjsteel1/prog01.html">M-Drive</a></li>
-				<li><a href="https://csis.svsu.edu/~bjsteel1/prog01.html">CSIS-Server</a></li>
-				<li><a href="http://bjsteel1.000webhostapp.com/prog01.html">000WebHostApp</a></li>
-			</ul>
-			<li>My opinion regarding which hosting platform is best. </li>
-			<p> I find that the csis server is the easiest hosting option because I can code my html directly in notepad++
-			    and upload it easily to the server. <p>
-		</ol>
+			<p>This is my page for cis255</p>
+		</header>
+		
+		<article>
+			<header>
+				<h2>Prog00</h2>
+			</header>
+			<section>
+				<h4>Links:</h4>
+				<ol>
+					<li>Topic:How to budget money</li>
+					<li>Github Pages: <a href="https://bjsteel1.github.io/pages/">https://bjsteel1.github.io/pages/</a></li>
+					<li>CodePen: <a href="https://codepen.io/bjsteel1/pen/dqzJRo">https://codepen.io/bjsteel1/pen/dqzJRo</a></li>
+					<li>M-Drive: <a href="https://webp.svsu.edu/~bjsteel1/cis255.html">https://webp.svsu.edu/~bjsteel1/cis255.html</a></li>
+					<li>CSIS Server: <a href="https://csis.svsu.edu/~bjsteel1/cis255.html">https://csis.svsu.edu/~bjsteel1/cis255.html</a></li>
+					<li>000webhost: <a href="bjsteel1.000webhostapp.com/index.html">bjsteel1.000webhostapp.com</a></li>
+				</ol>
+			</section>
+		</article>
+		
+		<article>
+			<header>
+				<h2>Prog01</h2>
+			</header>
+			
+			<section>
+				<ol>
+			
+					<li><a target="_blank" href="https://cis255.wordpress.com/editors-and-topics/">WordPress Topics Page</a></li>
+					<li><a href="https://codepen.io/bjsteel1/pen/vzzXXG">CodePen</a></li>
+					<li>Prog01 Links</li>
+					<ul>
+						<li><a href="https://webp.svsu.edu/~bjsteel1/prog01.html">M-Drive</a></li>
+						<li><a href="https://csis.svsu.edu/~bjsteel1/prog01.html">CSIS-Server</a></li>
+						<li><a href="http://bjsteel1.000webhostapp.com/prog01.html">000WebHostApp</a></li>
+					</ul>
+					<li>My opinion regarding which hosting platform is best. </li>
+					<p> I find that the csis server is the easiest hosting option because I can code my html directly in notepad++
+					and upload it easily to the server. <p>
+				</ol>
+			</section>
+		</article>
+		
+		<article>
+			<header>
+				<h2>Prog02</h2>
+			</header>
 
-<h1>Prog02</h1>
-	<li><a href="https://github.com/bjsteel1/PhpProject13">GitHub Repo</a></li>
-	<li><a target="_blank" href="https://csis.svsu.edu/~bjsteel1/PhpProject13/">CSIS Server</a></li>
+			<section>
+				<ol>
+					<li><a href="https://github.com/bjsteel1/PhpProject13">GitHub Repo</a></li>
+					<li><a target="_blank" href="https://csis.svsu.edu/~bjsteel1/PhpProject13/">CSIS Server</a></li>
+				</ol>
+			</section>
+		</article>
+	</body>
+</html>	
