--- a/index.html
+++ b/index.html
@@ -60,6 +60,18 @@
 				</ol>
 			</section>
 		</article>
+		
+		<article>
+			<header>
+				<h2>new prog template</h2>
+			</header>
+
+			<section>
+				<ol>
+					<li><a href="https://csis.svsu.edu/~bjsteel1/prog03/prog03.html">Prog03</a></li>
+				</ol>
+			</section>
+		</article>
 	</body>
 </html>	
 
