--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 				<ol>
 					<li><a href="https://csis.svsu.edu/~bjsteel1/prog03/prog03.html">Prog03</a></li>
 				</ol>
+				<li>Why I chose hosting location: </li>
 				<p>I chose to use the csis server because it was easy to upload the file from notepad++.</p>
 			</section>
 		</article>
